--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
+    "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "hamburger-react": "^2.5.2",
     "superagent": "^10.2.1"
   },
   "devDependencies": {
@@ -46,7 +50,6 @@
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
     "esbuild": "^0.18.19",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
@@ -58,16 +61,16 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.35",
+    "postcss": "^8.5.4",
     "prettier": "^3.2.5",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-router": "^7.6.1",
     "supertest": "^6.3.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "tsx": "^3.12.7",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0",
+    "vite": "^5.4.19",
     "vitest": "^1.2.0"
   },
   "prettier": {
