--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "framer-motion": "^12.16.0",
     "hamburger-react": "^2.5.2",
+    "ogl": "^1.0.11",
     "superagent": "^10.2.1"
   },
   "devDependencies": {
