--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.2",
     "framer-motion": "^12.16.0",
     "hamburger-react": "^2.5.2",
+    "matter-js": "^0.20.0",
     "ogl": "^1.0.11",
     "superagent": "^10.2.1"
   },
@@ -47,6 +48,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
