--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "hamburger-react": "^2.5.2",
     "matter-js": "^0.20.0",
     "ogl": "^1.0.11",
-    "superagent": "^10.2.1"
+    "superagent": "^10.2.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
