--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "run-s build:client build:server",
     "build:client": "vite build",
     "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
+    "render:build": "npm install && npm run build && npm prune --omit=dev",
+    "render:start": "node dist/server.js",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier -w '**/*.{js,jsx,ts,tsx}'"
@@ -38,6 +40,7 @@
     "hamburger-react": "^2.5.2",
     "matter-js": "^0.20.0",
     "ogl": "^1.0.11",
+    "pg": "^8.16.0",
     "superagent": "^10.2.1",
     "tailwind": "^4.0.0"
   },
