--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.17.2",
     "framer-motion": "^12.16.0",
     "hamburger-react": "^2.5.2",
