--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "run-s build:client build:server",
     "build:client": "vite build",
     "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
-    "render:build": "npm install && npm run build && npm prune --omit=dev",
+    "render:build": "npm install && npm run build && npm prune --omit=dev && NODE_ENV='production'",
     "render:start": "node dist/server.js",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
@@ -35,7 +35,6 @@
     "@tailwindcss/vite": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
     "express": "^4.17.2",
     "framer-motion": "^12.16.0",
     "hamburger-react": "^2.5.2",
