--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "run-s build:client build:server",
     "build:client": "vite build",
     "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
-    "render:build": "npm install && npm run build && npm prune --omit=dev && NODE_ENV='production'",
+    "render:build": "npm install && npm run build && npm prune --omit=dev",
     "render:start": "node dist/server.js",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
