--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "types": ["vite/client"],
     "target": "es2020", 
     "jsx": "react-jsx",
-    "module": "ES2020",
+    "module": "es2022",
     "moduleResolution": "Bundler", 
     "noEmit": true,
     "isolatedModules": true, 
